# Ecommerse

./: README.md
ecommerse/: .env  db.sqlite3  manage.py  pyproject.toml  requirements.txt
ecommerse/account/: admin.py  forms.py  models.py  urls.py  views.py
ecommerse/account/migrations/: 0001_initial.py
ecommerse/account/models/: user.py
ecommerse/apis/: views.py
ecommerse/commonapp/: admin.py
ecommerse/commonapp/migrations/: 0001_initial.py  0002_image.py  0003_address.py
ecommerse/commonapp/models/: __init__.py  address.py  category.py  image.py
ecommerse/company/: admin.py  forms.py  urls.py
ecommerse/company/migrations/: 0001_initial.py  0002_auto_20210801_1135.py  0003_company_is_verified.py  0004_companyuser_is_active.py
ecommerse/company/models/: __init__.py  company.py
ecommerse/company/views/: company.py
ecommerse/ecommerse/: asgi.py  settings.py  urls.py  wsgi.py
ecommerse/ecommerse/settings/: base.py  dev.py
ecommerse/helpers/: api_mixins.py  app_helpers.py  choices.py  constants.py  exceptions.py  misc.py  permission.py  serializer_fields.py  serializer_mixins.py  serializers.py
ecommerse/mixins/: mixin.py
ecommerse/order/: admin.py  models.py
ecommerse/order/migrations/: 0001_initial.py  0002_productorder_product_json.py  0003_remove_productorder_price.py  0004_productorder_order.py  0005_auto_20220324_0224.py
ecommerse/product/: admin.py  forms.py  models.py  reports.py  urls.py  views.py
ecommerse/product/migrations/: 0001_initial.py  (+22 more)
ecommerse/templates/: base.html  dashboard.html  dashboard_base.html  home.html
(+31 files in other folders)
