[tool.poetry]
name = "ecommerse"
version = "0.1.0"
description = ""
authors = ["rup <rup.rajbanshi@togglecorp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.2.10"
Django = "2.0.8"
django-crispy-forms = "1.8.0"
django-filter = "2.2.0"
django-multiupload = "0.5.2"
Pillow = "7.2.0"
pytz = "2020.1"
sqlparse = "0.3.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
